Fixed horizontal scroll and responsiveness for 320-751

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -58,13 +58,21 @@
     font-weight: 400;
     font-size: 36px;
     line-height: 40px;
-    width: 385px;
+    max-width: 388px;
+    margin-left: 14px;
     height: 80px;
+    margin-left: 19px;
+    margin-right: 16px;
   }
 
   .header__description {
-    width: 452px;
-    height: 48px;
+    max-width: 288px;
+    height: 72px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    margin-left: 19px;
+    margin-right: 16px;
   }
 }
 
