--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -55,28 +55,36 @@
 @media screen and (max-width: 768px) {
   .search_form_wrapper {
     /* max-width: 452px; */
-    max-width: 432px;
+    /* max-width: 432px; */
+    width: 100%;
+
     max-height: 56px;
-    margin-top: 30px;
-    margin-left: 143px;
+    margin-top: 19px;
+    /* border: solid red; */
+    /* margin-left: 143px; */
   }
 
   .search_form {
     /* margin-top: 48px; */
     margin-top: 0;
-    max-width: 100%;
+    /* max-width: 100%; */
+    /* width: 259px; */
     /* max-height: 100%; */
     height: 56px;
   }
 
   .search__form {
     height: 56px;
-    width: 448px;
+    /* width: 406px; */
+    width: 100%;
   }
 
   .search__btn {
     height: 56px;
-    width: 160px;
+    width: 118px;
+    /* left: 370px; */
+    left: auto;
+    right: 0;
   }
 }
 
